# myu-fileserver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schema.py  service.py
fastapp/: config.py  main.py  service.py
fastapp/api/v1/: api.py  schema.py
fastapp/api/v1/services/: files.py  texts.py
fastapp/api/v1_depricated/: api.py  schema.py
fastapp/api/v1_depricated/services/: files.py  texts.py
fastapp/api/v2/: api.py
fastapp/api/v2/services/: stop_finder.py
fastapp/api/v2/services/response_handler/: nyc_api_interface.py  station_data_reader.py  subway_response.py  utils.py
fastapp/api/v2/services/response_handler/docs/: MTA_Subway_Stations_20240121.csv
fastapp/api/v2/services/schemas/real_time_feeds/: subway_feeds.py
fastapp/api/v2/services/schemas/subway/: subway_response_schema.py  subway_schema.py  subway_trains.py
fastapp/core/: settings.py
fastapp/tests/: conftest.py  test_env
fastapp/tests/v2/: test_subway.py
fastapp/ui/: demo_page.py  landing_page.py
frontend/: landingpage.html  nginx.conf
proxy/: nginx.conf
server/: setup
subproject/: Dockerfile  README.md
