[tool.poetry]
name = "myu-fileserver"
version = "0.1.0"
description = ""
authors = ["reillyk <reilly@keating.fans>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
pydantic = "1.10.12"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
