[tool.poetry]
name = "myu-fileserver"
version = "0.1.0"
description = ""
authors = ["reillyk <reilly@keating.fans>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
requests = "^2.31.0"
gtfs-realtime-bindings = "^1.0.0"
pytest = "^7.4.4"
httpx = "^0.26.0"
fastui = "^0.4.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
